--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./css/timerCSS.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <script src="/js/events.js" type="module"></script>
+
+    <script src="/js/index.js" type="module"></script>
 </head>
 <body class="bodyTema">
     <header class="temas">
