--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
-    <script src="/js/index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
 </head>
 <body class="bodyTema">
     <header class="temas">
